--- a/ReadME
+++ b/ReadME
@@ -1,7 +1,7 @@
 conda create --name OCR-China python=3.8
 conda activate OCR-China
 pip install -r requirements.txt
-###Run OCR for video
+#Run OCR for video
 python main.py 
 ###Export to output capcut format
 python postprocess.py
