--- a/ReadME
+++ b/ReadME
@@ -3,5 +3,5 @@ conda activate OCR-China
 pip install -r requirements.txt
 #Run OCR for video
 python main.py 
-###Export to output capcut format
+#Export to output capcut format
 python postprocess.py
